@startuml

package mastermind.controller {
   interface ControllerVisitor
}

package mastermind.view.console {
   class KeyboardReader {
       Character apply(Vector<Character> validKeys);
   }

   class ControllerVisitorConsole <<ConcreteVisitor>> {
       void visit (StartController controller) <b> { startConsole.update(controller) }</b>
       void visit (PlayController controller) <b> { playConsole.update(controller) }</b>
       void visit (ResumeController controller) <b> { resumeConsole.update(controller) }</b>
   }

   class StartConsole  {
       void update(StartController startController)
   }
   class PlayConsole {
       void update(PlayController playController)
       void play(PlayController playController)
       void undo(PlayController playController)
       void redo(PlayController playController)
   }
   class ResumeConsole {
       void update(ResumeController resumeController)
   }

   namespace mastermind.view.console.menu {
      interface ActivationEvaluator <<Lambda>>{
         {abstract} boolean evaluate(PlayController playController)
      }

      class MenuConsole {
         MenuConsole add(Command command)
         void choose(PlayController playController)
      }
      class Command {
         Command(PlayConsole, character, title, ActivationEvaluator)
         {abstract} void execute(PlayController playController);
      }

      MenuConsole *--> Command

      Command *-right-> ActivationEvaluator
      Command <|--- PlayCommand
      Command <|-- QuitCommand
      Command <|--- RedoCommand
      Command <|-- UndoCommand

      class PlayCommand {
         void execute(PlayController playController) <b>{ playConsole.play(playController);  }</b>
      }

      class QuitCommand {
         void execute(PlayController playController) <b>{ playConsole.quit(playController);  }</b>
      }

      class RedoCommand {
         void execute(PlayController playController) <b>{ playConsole.redo(playController);  }</b>
      }

      class UndoCommand {
         void execute(PlayController playController) <b>{ playConsole.undo(playController);  }</b>
      }
   }

   mastermind.view.console.menu.MenuConsole *-left-> KeyboardReader

   PlayConsole *--> mastermind.view.console.menu.MenuConsole
}

ControllerVisitor <|-- ControllerVisitorConsole

ControllerVisitorConsole *--> StartConsole : startConsole
ControllerVisitorConsole *--> PlayConsole : playConsole
ControllerVisitorConsole *--> ResumeConsole : resumeConsole

PlayConsole --> KeyboardReader
ResumeConsole --> KeyboardReader

@enduml




